[package]
name = "doorbell"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12.0"
futures = "0.3.28"
notify-rust = "4.8.0"
paho-mqtt = "0.12.1"
serde = "1.0.160"
serde_derive = "1.0.160"
serde_json = "1.0.96"